// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Balance Component renders correctly with data 1`] = `
[
  <div>
    $100.00
  </div>,
  <div
    onClick={[Function]}
  >
    Add Transaction
  </div>,
]
`;

exports[`Balance Component renders correctly with no data (shows $0.00) 1`] = `
[
  <div>
    $0.00
  </div>,
  <div
    onClick={[Function]}
  >
    Add Transaction
  </div>,
]
`;
